# Backend-RedFox-Futebol

./: .env_exemplo  .pdm-python  db.sqlite3  package-lock.json  pyproject.toml  requirements.txt
RedFox/: admin.py  apps.py  models.py  serializers.py  views.py
RedFox/migrations/: 0001_initial.py  0002_jogos_horario.py  0002_time_capa.py  0003_remove_jogos_horario.py
RedFox/models/: __init__.py  categoria.py  estadios.py  ingresso.py  jogo.py  time.py
RedFox/serializers/: __init__.py  categoria.py  estadios.py  ingresso.py  jogos.py  time.py
RedFox/views/: __init__.py  categoria.py  estadios.py  ingresso.py  jogos.py  time.py
config/: settings.py  urls.py
uploader/migrations/: 0001_initial.py
usuario/migrations/: 0001_initial.py
